<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ScrollView
        android:id="@+id/PostInfoSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/PostImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/logo"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/PostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text=""
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPostDescriptionAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/ai_description" />

            <TextView
                android:id="@+id/PostDescriptionAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="" />

            <TextView
                android:id="@+id/textPostDescriptionOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/owner_description" />

            <TextView
                android:id="@+id/PostDescriptionOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="" />

            <TextView
                android:id="@+id/textPostPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/textPostPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/position" />

            <TextView
                android:id="@+id/textPostOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/owner" />

            <Button
                android:id="@+id/PostChatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:visibility="gone"
                android:layout_marginBottom="50dp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/PostDeleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_post"
                android:visibility="gone"
                android:layout_marginBottom="50dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textChat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chat"
                app:drawableTopCompat="@drawable/baseline_chat_24" />

            <TextView
                android:id="@+id/textExplore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/explore"
                android:textColor="@color/purple_700"
                app:drawableTopCompat="@drawable/baseline_search_24_p" />

            <TextView
                android:id="@+id/textProfile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile"
                app:drawableTopCompat="@drawable/baseline_account_circle_24" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>