<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">

    <TextView
        android:id="@+id/SingUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="323dp"
        android:layout_height="152dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444">

        <EditText
            android:id="@+id/SingUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_email_24"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/SingUpPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_lock_24"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/SingUpPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/baseline_lock_24"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/SingUpSingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/SingUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
